# binalg-jiashi

./: .gitignore  CMakeLists.txt  JiaShi.hpp  LICENSE.md  README.md  binalgorithms.cpp  binalgorithms.h  cppbinarize.cpp  utils.cpp  utils.h
doxa/: Bataineh.hpp  Parameters.hpp
